[mapToVisualRectInAncestorSpace] Check for detached iframes.

If, e.g., display:none is set on an iframe, mapTo... should return an empty rect.

BUG=627616
R=chrishtr@chromium.org,wangxianzhu@chromium.org

Review-Url: https://codereview.chromium.org/2218703002
Cr-Commit-Position: refs/heads/master@{#410185}

Former-commit-id: ff3e7c584eaff665b8560dc1b6150c95a2062fb0